Add activationEvents, was required for extension build.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "engines": {
         "vscode": "^1.78.0"
     },
+    "activationEvents": [
+        "onLanguage:dslx"
+    ],
     "main": "./out/extension",
     "contributes": {
         "configuration": {
